--- a/src/Payslip.form
+++ b/src/Payslip.form
@@ -25,15 +25,23 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jLblPayrollName" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jLblPayrollEmpNum" alignment="0" pref="169" max="32767" attributes="0"/>
-                  <Component id="jLblPayrollSSS" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jLblPayrollPhilhealth" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jLblPayrollPagibig" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jLblPayrollTIN" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="jDateChooserSelectDate" min="-2" pref="162" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                      <Component id="jBtnCalculate" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jLblPayrollName" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLblPayrollEmpNum" alignment="0" pref="169" max="32767" attributes="0"/>
+                      <Component id="jLblPayrollSSS" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLblPayrollPhilhealth" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLblPayrollPagibig" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLblPayrollTIN" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="jLabel1" alignment="0" min="-2" pref="109" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="799" max="32767" attributes="0"/>
+              <EmptySpace pref="676" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -41,18 +49,27 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-              <Component id="jLblPayrollName" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLblPayrollEmpNum" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLblPayrollSSS" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLblPayrollPhilhealth" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLblPayrollPagibig" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLblPayrollTIN" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="439" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jBtnCalculate" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jLblPayrollName" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLblPayrollEmpNum" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLblPayrollSSS" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLblPayrollPhilhealth" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLblPayrollPagibig" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLblPayrollTIN" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jDateChooserSelectDate" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace pref="363" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -86,6 +103,18 @@
     <Component class="javax.swing.JLabel" name="jLblPayrollTIN">
       <Properties>
         <Property name="text" type="java.lang.String" value="TIN:"/>
+      </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jDateChooserSelectDate">
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Select date:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jBtnCalculate">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Calculate"/>
       </Properties>
     </Component>
   </SubComponents>
