--- a/src/MainMenu.form
+++ b/src/MainMenu.form
@@ -106,6 +106,9 @@
           <Dimension value="[80, 25]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTimeoutActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonEmployee">
       <Properties>
