--- a/src/EmployeeTable.form
+++ b/src/EmployeeTable.form
@@ -126,6 +126,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add New Employee"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAddActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonExit">
       <Properties>
