--- a/src/Payslip.form
+++ b/src/Payslip.form
@@ -26,34 +26,46 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jDateChooserSelectDate" min="-2" pref="162" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
-                      <Component id="jBtnCalculate" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jDateChooserSelectDate" min="-2" pref="162" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                              <Component id="jBtnCalculate" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="jLabel1" alignment="0" min="-2" pref="109" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="676" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jLblPayrollName" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jLblPayrollEmpNum" alignment="0" pref="169" max="32767" attributes="0"/>
-                      <Component id="jLblPayrollSSS" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jLblPayrollPhilhealth" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jLblPayrollPagibig" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jLblPayrollTIN" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jLblPayrollName" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLblPayrollEmpNum" alignment="0" pref="169" max="32767" attributes="0"/>
+                          <Component id="jLblPayrollSSS" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLblPayrollPhilhealth" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLblPayrollPagibig" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLblPayrollTIN" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jButtonClose" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="177" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jLabel1" alignment="0" min="-2" pref="109" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="676" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jBtnCalculate" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="jLblPayrollName" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLblPayrollName" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButtonClose" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                       <Component id="jLblPayrollEmpNum" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLblPayrollSSS" min="-2" max="-2" attributes="0"/>
@@ -69,7 +81,7 @@
                       <Component id="jDateChooserSelectDate" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="363" max="32767" attributes="0"/>
+              <EmptySpace pref="362" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -116,6 +128,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Calculate"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonClose">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Close"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCloseActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
